--- a/form1/form1/form1.csproj
+++ b/form1/form1/form1.csproj
@@ -38,6 +38,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,7 +51,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\Validering.cs" />
+    <Compile Include="BLL\Virtual.cs" />
     <Compile Include="DL\Class1.cs" />
+    <Compile Include="DL\FileManager.cs" />
+    <Compile Include="DL\Podcasts.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
